<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nag_math"
        android:icon="@drawable/math"
        android:title="@string/nag_math"
        app:showAsAction="withText"

        />
    <item
        android:id="@+id/nag_history"
        android:icon="@drawable/baseline_history_black_18dp"
        android:title="@string/nag_history"
        app:showAsAction="withText"
        />
    <item
        android:id="@+id/nag_sport"
        android:icon="@drawable/sport"
        android:title="@string/nag_sport"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/nag_art"
        android:icon="@drawable/baseline_art_track_black_18dp"
        android:title="@string/nag_art"
        app:showAsAction="withText"/>
</menu>