<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/mainUI"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/listviewnavigationbar"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layout_gravity="start"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/editTextViewAnswer"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="315dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="50dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button7"
                        style="@style/table_layout"
                        android:text="7" />

                    <Button
                        android:id="@+id/button8"
                        style="@style/table_layout"
                        android:text="8" />

                    <Button
                        android:id="@+id/button9"
                        style="@style/table_layout"
                        android:text="9" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button4"
                        style="@style/table_layout"
                        android:text="4" />

                    <Button
                        android:id="@+id/button5"
                        style="@style/table_layout"
                        android:text="5" />

                    <Button
                        android:id="@+id/button6"
                        style="@style/table_layout"
                        android:text="6" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button1"
                        style="@style/table_layout"
                        android:text="1" />

                    <Button
                        android:id="@+id/button2"
                        style="@style/table_layout"
                        android:text="2" />

                    <Button
                        android:id="@+id/button3"
                        style="@style/table_layout"
                        android:text="3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button0"
                        style="@style/table_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                    <Button
                        android:id="@+id/buttonStart"
                        style="@style/table_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonStart" />

                    <Button
                        android:id="@+id/buttonMinus"
                        style="@style/table_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonClear"
                        style="@style/table_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonClear" />

                    <Button
                        android:id="@+id/buttonStop"
                        style="@style/table_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonStop" />

                    <Button
                        android:id="@+id/buttonQuit"
                        style="@style/table_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonQuit" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonEqual"
                        style="@style/table_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:text="=" />

                    <Button
                        android:id="@+id/buttonSave"
                        style="@style/table_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:text="@string/buttonSave" />

                    <Button
                        android:id="@+id/buttonResult"
                        style="@style/table_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:text="@string/buttonResult" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewCountDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/Youhave10seconds" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            app:menu="@menu/navigation_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>